--- a/src/app/stack/card-details/component-information/component-information.component.less
+++ b/src/app/stack/card-details/component-information/component-information.component.less
@@ -21,9 +21,9 @@
     .name {
         color: @steelBlue;
     }
-    .transCount {
+    .count {
         color: #d31b1b;
-        font-size: 15px;
+        font-size: 13px;
     }
     .card-pf {
         min-height: 75px;
