--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -130,13 +130,15 @@
             }
     }
     .circle {
+        width: 15px;
+        height: 15px;
         border-radius: 50%;
-        width: 10px;
-        height: 10px;
-        padding: 2px 5px;
+        padding: 5px 9px;
         color: white;
         text-align: center;
         font-weight: bold;
+        font-size: 15px;
+        text-transform: capitalize;
         &.critical {
             background-color: #8f0eaf;
         }
