--- a/src/app/stack/card-details/component-information/component-information.component.html
+++ b/src/app/stack/card-details/component-information/component-information.component.html
@@ -13,7 +13,7 @@
                         </div>
                         <div *ngSwitchCase="'component'">
                             <!-- Component Names -->
-                            <a class="name" [href]="comp?.url" target="_blank" [innerText]="comp?.name"></a>
+                            <a class="name" [href]="generateUrl(comp?.url)" target="_blank" title="command/ctrl + click" [innerText]="comp?.name"></a>
                             <span class="recommendation-reason" [tooltip]="component?.reason"
                                 *ngIf="component?.reason && type === 'recommendation' && comp?.name">Why this
                                 dependency?</span>
@@ -57,10 +57,10 @@
                         <div *ngSwitchCase="'cveIdOfH'">
                             <!-- cveIdOfHeighest CVSS -->
                             <a *ngIf="comp?.hasSecurityIssue && tabType == 'private'"
-                                [href]="comp?.privateSecurityDetails?.highestIssue?.url" target="_blank" class="name"
+                                [href]="comp?.privateSecurityDetails?.highestIssue?.url" target="_blank" class="name" title="command/ctrl + click"
                                 [innerText]="comp?.privateSecurityDetails && comp?.privateSecurityDetails?.highestIssue?.cve || '-'"></a>
                             <a *ngIf="comp?.hasSecurityIssue && tabType == 'public'" class="name"
-                                [href]="comp?.publicSecurityDetails?.highestIssue?.url" target="_blank"
+                                [href]="comp?.publicSecurityDetails?.highestIssue?.url" target="_blank" title="command/ctrl + click"
                                 [innerText]="comp?.publicSecurityDetails && comp?.publicSecurityDetails?.highestIssue?.cve || '-'"></a>
                             <span *ngIf="!comp?.hasSecurityIssue" [innerText]="'-'"></span>
 
