--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -1,6 +1,6 @@
 <div class="analytics-report-information">
 
-    <div class="snyk-box" *ngIf="report?.tabType == 'private'">
+    <div class="snyk-box" *ngIf="report?.tabType == 'private' && !this.transitive">
         <span class="col-sm-1">
             <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
         </span>
@@ -11,8 +11,8 @@
             Sign up to keep getting these insights and find out more about security risks in your dependencies.
         </span>
         <span class="col-sm-2">
-            <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=Red-Hat&utm_campaign=Code-Ready-Analytics-2020"
-                target="_blank"><button class="ripple">Sign up for a free Snyk account</button></a>
+            <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=Red-Hat&utm_campaign=Code-Ready-Analytics-2020&utm_content=register"
+                target="_blank" title="command/ctrl + click"><button class="ripple">Sign up for a free Snyk account</button></a>
         </span>
     </div>
 
