--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -113,20 +113,20 @@
         font-size: 13px;
         text-transform: capitalize;
             &.critical {
-                border: 2px solid #8f0eaf;
-                color: #8f0eaf;
+                border: 2px solid #800101;
+                color: #800101;
             }
             &.high {
-                border: 2px solid #ac1a46;
-                color: #ac1a46;
+                border: 2px solid #fb3333;
+                color: #fb3333;
             }
             &.medium {
                 border: 2px solid #ffa500;
                 color: #ffa500;
             }
             &.low {
-                border: 2px solid #949b8c;
-                color: #949b8c;
+                border: 2px solid #ffd900;
+                color: #ffd900;
             }
     }
     .circle {
@@ -140,16 +140,16 @@
         font-size: 15px;
         text-transform: capitalize;
         &.critical {
-            background-color: #8f0eaf;
+            background-color: #800101;
         }
         &.high {
-            background-color: #ac1a46;
+            background-color: #fb3333;
         }
         &.medium {
             background-color: #ffa500;
         }
         &.low {
-            background-color: #c2caba;
+            background-color: #ffd900;
         }
     }
     .box {
