fix(bug): license tab and New UTM

--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -132,7 +132,7 @@
                     </span>
                     <br>
                     <span class="common-container box">
-                        <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=Red-Hat&utm_campaign=Code-Ready-Analytics-2020&utm_content=register"
+                        <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=RedHat&utm_campaign=Code-Ready-Analytics-2020&utm_content=register"
                             target="_blank" title="command/ctrl + click">
                             <span>
                                 <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
