--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -132,14 +132,12 @@
                     </span>
                     <br>
                     <span class="common-container box">
-                        <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=RedHat&utm_campaign=Code-Ready-Analytics-2020&utm_content=register"
+                        <a [href]="this.generateUrl.regitrationURL"
                             target="_blank" title="command/ctrl + click">
                             <span>
                                 <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
                             </span>
-                            <span class="branding">Register for a free
-                                Snyk account to find out which vulnerabilities are known to be
-                                exploitable</span>
+                            <span class="branding">Sign in to view exploits</span>
                         </a>
                     </span>
                 </span>
