--- a/src/app/stack/card-details/report-information/report-information.component.html
+++ b/src/app/stack/card-details/report-information/report-information.component.html
@@ -11,7 +11,7 @@
             Sign up to keep getting these insights and find out more about security risks in your dependencies.
         </span>
         <span class="col-sm-2">
-            <a href="https://app.snyk.io/signup/?utm_medium=Partner&utm_source=RedHat&utm_campaign=Code-Ready-Analytics-2020&utm_content=register"
+            <a [href]="this.generateUrl.regitrationURL"
                 target="_blank" title="command/ctrl + click"><button class="ripple">Sign up for a free Snyk account</button></a>
         </span>
     </div>
