--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -114,7 +114,7 @@
     <div [ngClass]="component.isTransitive?'transitive-details' : null">
         <div class="common-table component-tags">
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.public_vulnerabilities && component?.public_vulnerabilities?.length > 0) && tabType=='public'">
+                *ngIf="component?.registrationStatus == 'freetier' && (component?.public_vulnerabilities?.length > 0) && tabType=='public'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
@@ -143,7 +143,7 @@
                 </span>
             </div>
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'registered' && (component?.private_vulnerabilities && component?.private_vulnerabilities?.length > 0) && tabType=='private'">
+                *ngIf="component?.registrationStatus == 'registered' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.private_vulnerabilities" class="wrapper">
@@ -159,7 +159,7 @@
                 </span>
             </div>
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && ((component?.public_vulnerabilities && component?.public_vulnerabilities?.length > 0) ||(component?.private_vulnerabilities && component?.private_vulnerabilities?.length > 0)) && tabType=='compDetails'">
+                *ngIf="component?.registrationStatus == 'freetier' && (component?.public_vulnerabilities?.length > 0 || component?.private_vulnerabilities?.length > 0) && tabType=='compDetails'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
@@ -182,7 +182,7 @@
                 </span>
             </div>
             <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.private_vulnerabilities && component?.private_vulnerabilities.length > 0) && tabType=='private'">
+                *ngIf="component?.registrationStatus == 'freetier' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <a class="name" [href]="getUrl(component.url, tabType, component?.registrationStatus)" target="_blank" title="command/ctrl + click">
