--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -224,7 +224,7 @@
                     <i [ngClass]="{'fa': true, 'fa-angle-right': !component?.showTransitive, 'fa-angle-down': component?.showTransitive}"
                         aria-hidden="true"></i>
                 </span>
-                <span
+                <span class="text-success"
                     [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"Show Transitives with Vulnerabilities"'>
                 </span>
                 <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
@@ -243,7 +243,7 @@
                     <i [ngClass]="{'fa': true, 'fa-angle-right': !component?.showTransitive, 'fa-angle-down': component?.showTransitive}"
                         aria-hidden="true"></i>
                 </span>
-                <span
+                <span class="text-success"
                     [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"Show Transitives with Vulnerabilities"'>
                 </span>
                 <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
