fix(add cursor): adder cursor on hover and >

--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -78,6 +78,9 @@
             margin-bottom: .8em;
             border-top: 1px solid #9c9c9c;
         }
+        &:hover {
+            cursor: pointer;
+        }
     }
     .license-container {
         span {
