--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -240,3 +240,58 @@
         }
     }
 }
+.custom-tooltip {
+    position: relative;
+    display: flex;
+    cursor: pointer;
+    .custom-tooltip-text {
+        visibility: hidden;
+        width: 150px;
+        background-color: #eee3e3;
+        color: rgb(177, 165, 165);
+        text-align: center;
+        line-height: 1.8em;
+        border-radius: 6px;
+        padding: 5px;
+        position: absolute;
+        z-index: 1;
+        top: 100%;
+        left: 0;
+        opacity: 0;
+        transition: .3s;
+        transform: translateY(-25px);
+        &:before {
+            content: '';
+            position: absolute;
+            left: 10%;
+            top: -7px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 15px;
+            height: 15px;
+            background-color: #eee3e3;
+            transform: rotate(45deg);
+        }
+        .no-wrap {
+            white-space: nowrap;
+        }
+        .engrave {
+            color: #eecece;
+            font-size: 8px;
+            text-shadow: 0px -1px 0px rgba(0, 0, 0, .5);
+        }
+    }
+    &:hover {
+        .custom-tooltip-text {
+            visibility: visible;
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+    .tooltip-content {
+        color: sienna;
+        font-size: 10px;
+    }
+}
+
+
