--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -242,14 +242,14 @@
 }
 .custom-tooltip {
     position: relative;
-    display: flex;
+    display: inline-block;
+    border: rgb(0, 0, 0);
     cursor: pointer;
     .custom-tooltip-text {
         visibility: hidden;
-        width: 150px;
         background-color: #eee3e3;
-        color: rgb(177, 165, 165);
-        text-align: center;
+        color: #b1a5a5;
+        width: auto;
         line-height: 1.8em;
         border-radius: 6px;
         padding: 5px;
@@ -272,12 +272,10 @@
             background-color: #eee3e3;
             transform: rotate(45deg);
         }
-        .no-wrap {
-            white-space: nowrap;
-        }
         .engrave {
             color: #eecece;
             font-size: 8px;
+            text-align: center;
             text-shadow: 0px -1px 0px rgba(0, 0, 0, .5);
         }
     }
@@ -287,6 +285,9 @@
             opacity: 1;
             transform: translateY(0px);
         }
+    }
+    .no-wrap {
+        white-space: nowrap;
     }
     .tooltip-content {
         color: sienna;
