--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -225,7 +225,7 @@
                         aria-hidden="true"></i>
                 </span>
                 <span class="btn"
-                    [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"Show Transitives with Vulnerabilities"'>
+                    [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"View Transitives with Vulnerabilities"'>
                 </span>
                 <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
             </div>
@@ -244,7 +244,7 @@
                         aria-hidden="true"></i>
                 </span>
                 <span class="btn"
-                    [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"Show Transitives with Vulnerabilities"'>
+                    [innerText]='component?.showTransitive ? "Hide Transitives with Vulnerabilities":"View Transitives with Vulnerabilities"'>
                 </span>
                 <span [innerHtml]="component?.allTransitiveDependencies.length" class="badge"></span>
             </div>
