--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -243,15 +243,17 @@
 .custom-tooltip {
     position: relative;
     display: inline-block;
-    border: rgb(0, 0, 0);
     cursor: pointer;
     .custom-tooltip-text {
         visibility: hidden;
         background-color: #eee3e3;
         color: #b1a5a5;
-        width: auto;
+        text-align: left;
+        box-sizing: border-box;
+        width: 250px;
         line-height: 1.8em;
         border-radius: 6px;
+        border: 1px solid #e9c0c0;
         padding: 5px;
         position: absolute;
         z-index: 1;
@@ -264,12 +266,14 @@
             content: '';
             position: absolute;
             left: 10%;
-            top: -7px;
+            top: -8px;
             margin-left: auto;
             margin-right: auto;
             width: 15px;
             height: 15px;
             background-color: #eee3e3;
+            border-left: 1px solid #e9c0c0;
+            border-top: 1px solid #e9c0c0;
             transform: rotate(45deg);
         }
         .engrave {
@@ -292,6 +296,7 @@
     .tooltip-content {
         color: sienna;
         font-size: 10px;
+        padding:0px 10px;
     }
 }
 
