--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -250,12 +250,12 @@
     display: inline-block;
     cursor: pointer;
     .custom-tooltip-text {
+        display: inline-block;
         visibility: hidden;
         background-color: #eee3e3;
         color: #b1a5a5;
         text-align: left;
         box-sizing: border-box;
-        width: 250px;
         line-height: 1.8em;
         border-radius: 6px;
         border: 1px solid #e9c0c0;
@@ -282,8 +282,8 @@
             transform: rotate(45deg);
         }
         .engrave {
-            color: #eecece;
-            font-size: 8px;
+            color: #eb8585;
+            font-size: 9px;
             text-align: center;
             text-shadow: 0px -1px 0px rgba(0, 0, 0, .5);
         }
