remove the engraved text in the tooltip & make it a normal text

--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -137,7 +137,7 @@
                                     <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank" [innerText]="cve.id"></a></span>
                                 </div>
                                 <div class="footer no-wrap">
-                                    <span class="engrave">(cmd/ctrl + click)</span>
+                                    <span class="click">(cmd/ctrl + click)</span>
                                 </div>
                             </div>
                         </span>
@@ -193,7 +193,7 @@
                                     <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank" [innerText]="cve.id"></a></span>
                                 </div>
                                 <div class="footer no-wrap">
-                                    <span class="engrave">(cmd/ctrl + click)</span>
+                                    <span class="click">(cmd/ctrl + click)</span>
                                 </div>
                             </div>
                         </span>
