--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.less
@@ -254,7 +254,7 @@
         flex-direction: column;
         visibility: hidden;
         background-color: #eee3e3;
-        padding: 7px 2px;
+        padding: 6px 2px 4px;
         color: #b1a5a5;
         text-align: left;
         box-sizing: border-box;
@@ -314,11 +314,10 @@
         align-items: center;
         justify-content: center;
     }
-    .engrave {
+    .click {
         text-align: center;
-        color: #eb8585;
+        color: #4f5a64;
         font-size: 9px;
-        text-shadow: 0px -1px 0px rgba(0, 0, 0, .5);
     }
 }
 .btn {
