--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -44,7 +44,8 @@
                 </div>
                 <div [ngClass]="{'col-xs-12': component?.currentVersion === '-----'}">
                     <p>Recommended Version</p>
-                    <p class="info-head" [innerText]="component?.recommended_version"></p>
+                    <p *ngIf="(tabType == 'private' || tabType == 'public' || tabType == 'compDetails')" class="info-head" [innerText]="component?.recommended_version"></p>
+                    <p *ngIf="!(tabType == 'private' || tabType == 'public' || tabType == 'compDetails')" class="info-head" [innerText]="component?.latestVersion"></p>
                 </div>
             </div>
         </ng-template>
