--- a/src/app/stack/stack-details/stack-details.component.html
+++ b/src/app/stack/stack-details/stack-details.component.html
@@ -1,21 +1,34 @@
 <div class="stack-report">
     <div *ngIf="!error">
-        <tabset *ngIf="dataLoaded">
-            <tab *ngFor="let tabz of tabs" (select)="tabSelection(tabz)" (deselect)="tabDeSelection(tabz)"
-                [customClass]="tabz.active ? 'active-menu-item' : 'inactive-menu'">
-                <ng-template tabHeading>
-                    <i *ngIf="tabz.hasWarning"
-                        [ngClass]="{'pficon-warning-triangle-o': true, 'icon-severe': tabz.severity === 1, 'icon-moderate': tabz.severity === 2}"></i>
-                    <span [innerHtml]="tabz.title" style="margin-left: 5px"></span>
-                </ng-template>
-                <!-- Stack Report Design Revamp - BEGIN -->
-                <analytics-report-summary (onCardClick)="handleCardClick($event)" [report]="tabz.content">
-                </analytics-report-summary>
-                <card-details [genericInformation]="genericInformation && genericInformation" *ngIf="cardDetails"
-                    [cardDetails]="cardDetails" [repoInfo]="repoInfo"></card-details>
-                <!-- Stack Report Design Revamp - END -->
-            </tab>
-        </tabset>
+        <div *ngIf="dataLoaded">
+            <div class="row nav-bar">
+                <div class="col-md-11">
+                    <div class="nav-item">
+                        <i *ngIf="tabs[0].hasWarning"
+                            [ngClass]="{'pficon-warning-triangle-o': true, 'icon-severe': tabs[0].severity === 2, 'icon-moderate': tabs[0].severity === 2}"></i>
+                        <span [innerHtml]="tabs[0].title" style="margin-left: 5px"></span>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                    <span class="custom-tooltip name"><button class="btn btn-info btn-sm">Share</button>
+                        <div class="custom-tooltip-wrapper">
+                            <div class="custom-tooltip-text no-wrap">
+                                <input type="text" [value]="mainUrl" id="myInput" size="10" class="mar">
+                                <br>
+                                <button type="button" class="btn btn-info btn-sm mar" (click)="copy()" >Copy Url</button>
+                            </div>
+                        </div>
+                    </span>
+                </div>
+            </div>
+
+            <!-- Stack Report Design Revamp - BEGIN -->
+            <analytics-report-summary (onCardClick)="handleCardClick($event)" [report]="tabs[0].content">
+            </analytics-report-summary>
+            <card-details [genericInformation]="genericInformation && genericInformation" *ngIf="cardDetails"
+                [cardDetails]="cardDetails" [repoInfo]="repoInfo"></card-details>
+            <!-- Stack Report Design Revamp - END -->
+        </div>
     </div>
     <div *ngIf="!dataLoaded" class="pre-loader">
         <div class="pre-loader-spinner spinner spinner-lg"></div>
