--- a/src/app/stack/stack-details/stack-details.component.less
+++ b/src/app/stack/stack-details/stack-details.component.less
@@ -5,8 +5,16 @@
 @steelBlue: #39a5dc;
 
 .stack-report {
-
-
+  .nav-bar {
+    border: none;
+    background-color: @headerBg;
+    .nav-item {
+      margin-left: 8px;
+      display: inline-block;
+      font-weight: bold;
+      color: @headerTextColor;
+    }
+  }
   /** Changes for the stack report design revamp latest */
   .modal-header {
     background-color: @headerBg;
@@ -132,5 +140,83 @@
       .progress-class { color: #3b5998; }
     }
     .error-container { position: relative; }
+  }
+}
+.custom-tooltip {
+  position: relative;
+  display: block;
+  cursor: pointer;
+  .custom-tooltip-wrapper {
+      display: inline-flex;
+      flex-direction: column;
+      visibility: hidden;
+      background-color: #eee3e3;
+      padding: 6px 2px 4px;
+      color: #b1a5a5;
+      text-align: center;
+      box-sizing: border-box;
+      line-height: 1.2em;
+      border-radius: 6px;
+      border: 1px solid #e9c0c0;
+      position: absolute;
+      z-index: 1;
+      top: 100%;
+      left: -25px;
+      opacity: 0;
+      transition: .3s;
+      transform: translateY(-25px);
+      &:before {
+        content: '';
+        position: absolute;
+        left: 43px;
+        top: -6px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 10px;
+        height: 10px;
+        background-color: #eee3e3;
+        border-left: 1px solid #e9c0c0;
+        border-top: 1px solid #e9c0c0;
+        transform: rotate(45deg);
+    }
+  }
+  &:hover {
+      .custom-tooltip-wrapper {
+          visibility: visible;
+          opacity: 1;
+          transform: translateY(0px);
+      }
+  }
+  .no-wrap {
+      white-space: nowrap;
+  }
+  .custom-tooltip-text {
+      font-size: 10px;
+      padding: 0px 5px;
+  }
+  .head {
+      color: sienna;
+      padding: 0 2px;
+  }
+  .score {
+      color: #4f5a64;
+      padding: 0 2px;
+      font-weight: bold;
+  }
+  .url {
+      padding: 0 2px;
+  }
+  .footer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+  .click {
+      text-align: center;
+      color: #4f5a64;
+      font-size: 10px;
+  }
+  .mar {
+    margin: 5px;
   }
 }
