--- a/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
+++ b/src/app/stack/card-details/component-information/component-snippet/component-snippet.component.html
@@ -44,7 +44,9 @@
                 </div>
                 <div [ngClass]="{'col-xs-12': component?.currentVersion === '-----'}">
                     <p>Recommended Version</p>
-                    <p class="info-head" [innerText]="(tabType == 'private' || tabType == 'public' || tabType == 'compDetails') ? component?.recommended_version : component?.latestVersion"></p>
+                    <p class="info-head"
+                        [innerText]="(tabType == 'private' || tabType == 'public' || tabType == 'compDetails') ? component?.recommended_version : component?.latestVersion">
+                    </p>
                 </div>
             </div>
         </ng-template>
@@ -113,20 +115,24 @@
     </div>
     <div [ngClass]="component.isTransitive?'transitive-details' : null">
         <div class="common-table component-tags">
-            <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.public_vulnerabilities?.length > 0) && tabType=='public'">
+            <div class="common-wrapper" *ngIf="(component?.public_vulnerabilities?.length > 0) && tabType=='public'">
                 <span class="info-head">Vulnerabilities:</span>
                 <span class="common-container">
                     <span *ngFor="let cve of component?.public_vulnerabilities" class="wrapper">
-                        <!-- <span class="severity"
-                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low'}"> -->
-                        <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"
-                            title="Critical"></span>
-                        <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'" title="High"></span>
-                        <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"
-                            title="Medium"></span>
-                        <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'" title="Low"></span>
-                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)" target="_blank">{{cve.title}}</a>
+                        <span class="severity"
+                            [ngClass]="{'critical':cve.severity == 'critical', 'high':cve.severity == 'high','medium':cve.severity == 'medium','low':cve.severity == 'low' && component.registrationStatus == 'registered'}">
+                            <span *ngIf="cve.severity == 'critical'" class="circle critical" [innerText]="'C'"
+                                title="Critical"></span>
+                            <span *ngIf="cve.severity == 'high'" class="circle high" [innerText]="'H'"
+                                title="High"></span>
+                            <span *ngIf="cve.severity == 'medium'" class="circle medium" [innerText]="'M'"
+                                title="Medium"></span>
+                            <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'" title="Low">
+                            </span>
+                            <span *ngIf="component?.registrationStatus == 'registered'" [innerText]="cve.severity"></span> <!-- exploit -->
+                        </span>
+                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                                target="_blank">{{cve.title}}</a>
                             <div class="custom-tooltip-wrapper">
                                 <div class="custom-tooltip-text no-wrap">
                                     <span class="head">CVSS Score:</span>
@@ -134,7 +140,8 @@
                                 </div>
                                 <div class="custom-tooltip-text no-wrap">
                                     <span class="head">Snyk ID:</span>
-                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank" [innerText]="cve.id"></a></span>
+                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                            [innerText]="cve.id"></a></span>
                                 </div>
                                 <div class="footer no-wrap">
                                     <span class="click">(cmd/ctrl + click)</span>
@@ -143,7 +150,7 @@
                         </span>
                     </span>
                     <br>
-                    <span class="common-container box">
+                    <span class="common-container box" *ngIf="component?.registrationStatus!='registered'">
                         <a [href]="this.generateUrl.regitrationURL" target="_blank" title="command/ctrl + click">
                             <span>
                                 <img src="/assets/icon/snyk-avatar.png" alt="snyk-avatar" class="avatar" />
@@ -153,6 +160,17 @@
                     </span>
                 </span>
             </div>
+
+            <div class="common-wrapper"
+                *ngIf="component?.registrationStatus == 'freetier' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
+                <span class="info-head">Vulnerabilities:</span>
+                <span class="common-container">
+                    <a class="name" [href]="getUrl(component.url, tabType, component?.registrationStatus)"
+                        target="_blank" title="command/ctrl + click">
+                        Sign up with Snyk</a>
+                </span>
+            </div>
+
             <div class="common-wrapper"
                 *ngIf="component?.registrationStatus == 'registered' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
                 <span class="info-head">Vulnerabilities:</span>
@@ -182,7 +200,8 @@
                         <span *ngIf="cve.severity == 'low'" class="circle low" [innerText]="'L'"></span>
                         <!-- <span [innerText]="cve.severity"></span> -->
                         <!-- </span> -->
-                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)" target="_blank">{{cve.title}}</a>
+                        <span class="custom-tooltip name"><a [href]="getUrl(cve.url, tabType)"
+                                target="_blank">{{cve.title}}</a>
                             <div class="custom-tooltip-wrapper">
                                 <div class="custom-tooltip-text no-wrap">
                                     <span class="head">CVSS Score:</span>
@@ -190,7 +209,8 @@
                                 </div>
                                 <div class="custom-tooltip-text no-wrap">
                                     <span class="head">Snyk ID:</span>
-                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank" [innerText]="cve.id"></a></span>
+                                    <span class="url"><a [href]="getUrl(cve.url, tabType)" target="_blank"
+                                            [innerText]="cve.id"></a></span>
                                 </div>
                                 <div class="footer no-wrap">
                                     <span class="click">(cmd/ctrl + click)</span>
@@ -205,16 +225,8 @@
                     </a>
                 </span>
             </div>
-            <div class="common-wrapper"
-                *ngIf="component?.registrationStatus == 'freetier' && (component?.private_vulnerabilities?.length > 0) && tabType=='private'">
-                <span class="info-head">Vulnerabilities:</span>
-                <span class="common-container">
-                    <a class="name" [href]="getUrl(component.url, tabType, component?.registrationStatus)"
-                        target="_blank" title="command/ctrl + click">
-                        Sign up with Snyk</a>
-                </span>
-            </div>
         </div>
+
         <div class="common-table component-licenses">
             <div class="common-wrapper">
                 <span class="info-head">License(s) used: </span>
